<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/constraintLayout">

    <TextView
            android:text="@string/Available_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp" android:textColor="@color/colorBlue" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/gb"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/flag_of_the_united_kingdom"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp" app:srcCompat="@drawable/fr"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/flag_of_france"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp" app:srcCompat="@drawable/arab"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/arabic_language"/>
</androidx.constraintlayout.widget.ConstraintLayout>