<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
        name="article"
        type="com.angelstudio.newsapp.data.db.entity.Article"/>
        
        <variable
                name="clickListener"
                type="com.angelstudio.newsapp.ui.archive.ArchiveListener"/>

        <variable
            name="archiveListener"
            type="com.angelstudio.newsapp.ui.archive.ArchivearchiveListener"/>

        <variable
                name="shareListener"
                type="com.angelstudio.newsapp.ui.archive.ShareListener"/>
    </data>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:onClick="@{() ->clickListener.onClick(article)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/headline_item_image"
                    android:scaleType="fitXY"
                    android:visibility="visible"
                    app:autoPlay="false"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showFullScreenButton="false"
                    app:urlvideo="@{article}" />

            <ImageView
                    android:id="@+id/urlToImage"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/headline_item_image"
                    android:scaleType="fitXY"
                    android:visibility="visible"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:urlToImage="@{article}"
                    tools:srcCompat="@tools:sample/avatars[1]" />

            <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="gravity"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:theme="@style/Preference.desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    app:title="@{article}" />


            <TextView
                    android:id="@+id/publishedAt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textSize="12sp"
                    android:theme="@style/datenauthor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:publishedAt="@{article}" />



            <TextView
                    android:id="@+id/publishedAtDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:gravity="start"
                    android:textSize="12sp"
                    android:theme="@style/datenauthor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/publishedAt"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:publishedAtDay="@{article}" />

            <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="30dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/share_on_social_media"
                    android:onClick="@{() ->shareListener.onClick(article)}"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/publishedAtDay"
                    app:srcCompat="@drawable/ic_share" />

            <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/bookmark_article"
                    android:onClick="@{() ->archiveListener.onClick(article)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/publishedAtDay"

                    app:srcCompat="@drawable/ic_delete" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>
